<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plusminus"
    tools:context=".Fragments.PlusTwoFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#ffeb3b"

        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary"
        >

        <TextView
            android:id="@+id/counting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" 1 / 9 "
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="casual"/>

        <ImageView
            android:id="@+id/aplle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:src="@drawable/ic1_star"
            />
        <ImageView
            android:id="@+id/aplle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:src="@drawable/ic1_star" />
        <ImageView
            android:id="@+id/aplle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:src="@drawable/ic1_star" />
        <ImageView
            android:id="@+id/aplle4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:src="@drawable/ic1_star" />
        <ImageView
            android:id="@+id/aplle5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:src="@drawable/ic1_star" />
        <ImageView
            android:id="@+id/aplle6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:src="@drawable/ic1_star" />
        <ImageView
            android:id="@+id/aplle7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:src="@drawable/ic1_star" />
        <ImageView
            android:id="@+id/aplle8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:src="@drawable/ic1_star" />
        <ImageView
            android:id="@+id/aplle9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:src="@drawable/ic1_star" />
        <ImageView
            android:id="@+id/aplle10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:src="@drawable/ic1_star" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/first_lvl_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textSize="72sp"
        android:textStyle="bold"
        android:textColor="#304ffe"
        android:fontFamily="casual"
        android:padding="24dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/answer0"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/lvl1_0"
        android:padding="4dp"
        android:textSize="30sp"
        app:cornerRadius="50dp"
        android:backgroundTint="#ffeb3b"
        android:textColor="@color/black"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"

        android:useDefaultMargins="true">

        <Button
            android:id="@+id/answer1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/lvl1_1"
            android:padding="4dp"
            android:textSize="30sp"
            app:cornerRadius="50dp"
            android:backgroundTint="#ffeb3b"
            android:textColor="@color/black"
            />
        <Button
            android:id="@+id/answer2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/lvl1_2"
            android:padding="4dp"
            android:backgroundTint="#ffeb3b"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:cornerRadius="50dp"/>
        <Button
            android:id="@+id/answer3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/lvl1_3"
            android:padding="4dp"
            android:textSize="30sp"
            app:cornerRadius="50dp"
            android:backgroundTint="#ffeb3b"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/answer4"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/lvl1_4"
            android:padding="4dp"
            android:textSize="30sp"
            app:cornerRadius="50dp"
            android:backgroundTint="#ffeb3b"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/answer5"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/lvl1_5"
            android:padding="4dp"
            android:textSize="30sp"
            app:cornerRadius="50dp"
            android:backgroundTint="#ffeb3b"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/answer6"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/lvl1_6"
            android:padding="4dp"
            android:textSize="30sp"
            app:cornerRadius="50dp"
            android:backgroundTint="#ffeb3b"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/answer7"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/lvl1_7"
            android:padding="4dp"
            android:textSize="30sp"
            app:cornerRadius="50dp"
            android:backgroundTint="#ffeb3b"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/answer8"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/lvl1_8"
            android:padding="4dp"
            android:textSize="30sp"
            app:cornerRadius="50dp"
            android:backgroundTint="#ffeb3b"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/answer9"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/lvl1_9"
            android:padding="4dp"
            android:textSize="30sp"
            app:cornerRadius="50dp"
            android:backgroundTint="#ffeb3b"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/answer10"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/lvl1_10"
            android:padding="4dp"
            android:textSize="30sp"
            app:cornerRadius="50dp"
            android:backgroundTint="#ffeb3b"
            android:textColor="@color/black"/>

    </GridLayout>


</LinearLayout>